--- a/ui/src/app/components/game/inventory/inventory-header/inventory-header.component.scss
+++ b/ui/src/app/components/game/inventory/inventory-header/inventory-header.component.scss
@@ -81,7 +81,7 @@
 .filters {
   display: flex;
   gap: var(--spacing-s);
-  margin-bottom: var(--spacing-l);
+  margin-bottom: var(--spacing-s);
   flex-shrink: 0;
 
   .category-filter,
